# DisableAPM

./: Cargo.toml  LICENSE  README.md  README.zh.md  README_zh.md  build.bat  build.rs
resource/: DisableAPM.exe.manifest  resource.rc
src/: cli.rs  console.rs  main.rs  utils.rs
