[package]
name = "DisableAPM"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
embed-resource = "3.0.7"
thunk-rs = "0.3.5"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
console = "0.16.3"
anyhow = "1.0.102"
windows = { version = "0.62.2", features = ["Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Ioctl", "Win32_System_IO", "Win32_System_SystemInformation", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Storage_IscsiDisc"] }
